<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:fitsSystemWindows="true"
    tools:context="com.yako.safekids.activity.RequestAlert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="36dp"
            android:padding="16dp"
            android:src="@drawable/ic_logo" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/new_bag" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:minHeight="150dp">

                    <TextView
                        android:id="@+id/tv_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/alerte_red_text"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_medium_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_top"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="24dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/alerte_red_cancel"
                            android:textColor="@color/colorRed"
                            android:textSize="@dimen/text_medium_size" />

                        <TextView
                            android:id="@+id/tv_valid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/alerte_red_valide"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/text_medium_size" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>
